syntax = "proto3";

package csw_protobuf;

import "csw_protobuf/units.proto";
import "csw_protobuf/keytype.proto";
import "scalapb/scalapb.proto";
import "csw_protobuf/parameter_types.proto";

option (scalapb.options) = {
    import: "csw.event.client.pb._"
    import: "csw.event.client.pb.TypeMapperSupport._"
    import: "csw.params.core.models._"
    single_file: true
};

message PbParameter {
    string name                             = 1;
    PbUnits units                           = 2;
    PbKeyType keyType                       = 3;
    oneof items {
        ChoiceItems choiceItems             = 50;
        RaDecItems raDecItems               = 51;
        StructItems structItems             = 52;
        UTCTimeItems utcTimeItems           = 53;
        TAITimeItems taiTimeItems           = 54;

        StringItems stringItems             = 55;
        BooleanItems booleanItems           = 56;
        CharItems charItems                 = 57;

        ByteItems byteItems                 = 58;
        ShortItems shortItems               = 59;
        IntItems intItems                   = 60;
        LongItems longItems                 = 61;
        DoubleItems doubleItems             = 62;
        FloatItems floatItems               = 63;

        ByteArrayItems byteArrayItems       = 64;
        ShortArrayItems shortArrayItems     = 65;
        IntArrayItems intArrayItems         = 66;
        LongArrayItems longArrayItems       = 67;
        FloatArrayItems floatArrayItems     = 68;
        DoubleArrayItems doubleArrayItems   = 69;

        ByteMatrixItems byteMatrixItems     = 70;
        ShortMatrixItems shortMatrixItems   = 71;
        IntMatrixItems intMatrixItems       = 72;
        LongMatrixItems longMatrixItems     = 73;
        FloatMatrixItems floatMatrixItems   = 74;
        DoubleMatrixItems doubleMatrixItems = 75;
    }
}

message PbStruct {
    repeated PbParameter paramSet = 1;
}

message StructItems {
    option (scalapb.message).extends = "ItemType[Struct]";
    option (scalapb.message).companion_extends = "ItemTypeCompanion[StructItems]";
    repeated PbStruct values = 1 [(scalapb.field).type = "Struct"];
}
